# validated-llm

./: .flake8  .gitignore  .pre-commit-config.yaml  .validated-llm.yml  2025-05-26.txt  20250707.md  CLAUDE.md  README.md  ROADMAP.md  add-vendor-name.md  demo_langchain_integration.py  demo_langchain_usage.py  example_langchain_migration.py  install.sh  mock_chatbot.py  pyproject.toml  release.sh  validated-llm-notes.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
chatbot/: __init__.py  chatbot.py
docs/: COOKBOOK.md  architecture-patterns.md  best-practices.md  features.md  market-analysis.md  plugin-development.md  plugin-system.md  publishing-guide.md  roadmap.md
examples/: README.md  async_validation_demo.py  builtin_story_to_scenes_full.py  code_generation_demo.py  complex_data_analysis_task.py  config_demo.py  credit_card_validator.py  custom_email_task.py  demo_cli.py  demo_code_formats.py  demo_code_refactoring.py  demo_comprehensive.py  demo_parser_mapping.py  function_generation_task.py  social_security_validator.py  software_engineering_demo.py  style_validation_demo.py  test_generation_demo.py  validation_patterns.py
examples/story-to-scenes/: builtin_story_to_scenes_demo.py  builtin_story_to_scenes_simple.py
src/validated_llm/: __init__.py  async_validation_loop.py  config.py  validation_loop.py
src/validated_llm/integrations/langchain/: README.md
src/validated_llm/integrations/langchain/examples/: basic_conversion.py
src/validated_llm/tasks/: __init__.py  json_generation.py  test_generation.py
src/validated_llm/validators/: __init__.py  email.py  sql.py  style.py  syntax.py  test.py  url.py  xml.py
tests/: test_async_validation.py  test_code_formats.py  test_config.py  test_error_formatting.py  test_llm_validation_integration.py  test_validation_cache.py
tests/integrations/: test_langchain_converter.py  test_langchain_converter_simple.py  test_langchain_fixed.py  test_langchain_integration.py  test_langchain_standalone.py
tests/plugins/: __init__.py  test_manager.py  test_registry.py
tests/tasks/: test_code_refactoring.py  test_software_engineering.py
tests/validators/: test_composite_validator.py  test_documentation_validator.py  test_enhanced_validation.py  test_json_schema_validator.py  test_refactoring_validator.py  test_sql_validator.py  test_style_validator.py  test_syntax_validator.py  test_test_validator.py  test_xml_validator.py  test_yaml_validator.py
tools/: README.md
tools/prompt_to_task/: TEMPLATE_LIBRARY_GUIDE.md  analyzer.py  cli.py  cli_click.py  code_generator.py  template_library.py  validator_suggester.py
tools/tests/: README.md  test_cli_click.py  test_code_generator.py  test_integration.py  test_json_schema_detection.py
